--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "preset": "jest-expo"
   },
   "dependencies": {
+    "@babel/runtime": "^7.24.7",
     "@expo/vector-icons": "^14.0.0",
+    "@react-native/assets-registry": "^0.74.84",
     "@react-navigation/native": "^6.0.2",
     "clsx": "^2.1.1",
     "expo": "~51.0.14",
