--- a/package.json
+++ b/package.json
@@ -18,22 +18,26 @@
     "@babel/runtime": "^7.24.7",
     "@expo/vector-icons": "^14.0.0",
     "@react-native/assets-registry": "^0.74.84",
-    "@react-navigation/native": "^6.0.2",
+    "@react-navigation/bottom-tabs": "^6.5.20",
+    "@react-navigation/native": "^6.1.17",
+    "@react-navigation/native-stack": "^6.9.26",
+    "@react-navigation/stack": "^6.3.29",
     "clsx": "^2.1.1",
-    "expo": "~51.0.14",
+    "expo": "^51.0.14",
     "expo-constants": "~16.0.2",
     "expo-font": "~12.0.7",
     "expo-linking": "~6.3.1",
-    "expo-router": "~3.5.16",
+    "expo-router": "^3.5.16",
     "expo-splash-screen": "~0.27.5",
     "expo-status-bar": "~1.12.1",
     "expo-system-ui": "~3.0.6",
     "expo-web-browser": "~13.0.3",
     "nativewind": "^2.0.11",
-    "react": "18.2.0",
+    "react": "^18.3.1",
     "react-dom": "18.2.0",
     "react-native": "0.74.2",
     "react-native-gesture-handler": "~2.16.2",
+    "react-native-paper": "^5.12.3",
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.1",
     "react-native-screens": "3.31.1",
