--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "@babel/runtime": "^7.24.7",
     "@expo/vector-icons": "^14.0.0",
+    "@react-native-async-storage/async-storage": "1.23.1",
     "@react-native-community/geolocation": "^3.2.1",
     "@react-native/assets-registry": "^0.74.84",
     "@react-navigation/bottom-tabs": "^6.5.20",
