--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "@babel/runtime": "^7.24.7",
     "@expo/vector-icons": "^14.0.0",
+    "@notifee/react-native": "^7.8.2",
     "@react-native-async-storage/async-storage": "1.23.1",
     "@react-native-community/geolocation": "^3.2.1",
     "@react-native/assets-registry": "^0.74.84",
@@ -27,6 +28,7 @@
     "axios": "^1.7.2",
     "clsx": "^2.1.1",
     "expo": "^51.0.14",
+    "expo-build-properties": "~0.12.3",
     "expo-constants": "~16.0.2",
     "expo-font": "~12.0.7",
     "expo-linking": "~6.3.1",
@@ -46,7 +48,9 @@
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.1",
     "react-native-screens": "3.31.1",
-    "react-native-web": "~0.19.10"
+    "react-native-uuid": "^2.0.2",
+    "react-native-web": "~0.19.10",
+    "uuid": "^10.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
