--- a/package.json
+++ b/package.json
@@ -42,12 +42,16 @@
     "react": "^18.3.1",
     "react-dom": "18.2.0",
     "react-native": "0.74.2",
+    "react-native-geolocation-service": "^5.3.1",
     "react-native-gesture-handler": "~2.16.2",
+    "react-native-maps": "^1.15.6",
+    "react-native-maps-directions": "^1.9.0",
     "react-native-masked-text": "^1.13.0",
     "react-native-paper": "^5.12.3",
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.1",
     "react-native-screens": "3.31.1",
+    "react-native-toast-message": "^2.2.0",
     "react-native-uuid": "^2.0.2",
     "react-native-web": "~0.19.10",
     "uuid": "^10.0.0"
